google-cloud/orchestrator/orchestrator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: orchestrator-pod
  labels:
    app: orchestrator
spec:
  containers:
  - name: orchestrator-container
    image: cristiank/orchestrator:1.2
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-service
spec:
  selector:
    app: orchestrator
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
